支持获取Rancher 指定Env中的所有服务
Commit by Andy.Zhang
Email: ztao8607@gmail.com

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ go:
   - 1.8
 
 install:
+- export GITVER=$(git rev-parse HEAD)
+- export VER=${GITVER:0:8}
+- day=$(date +%Y%m%d)
+- export TAG=${day}'-'${VER}
 - go build -a
 
 script:
